# dwg-rs

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLEANROOM.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  STATUS.md  THREAT_MODEL.md  cliff.toml  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  corpus_submission.yml  feature_request.yml  unsupported_version.yml
.github/workflows/: ci.yml  docs-rs.yml  fuzz-nightly.yml  pages.yml  perf.yml  release.yml  wasm.yml
benches/: libredwg_compare.rs  lz77.rs  metadata_parse.rs  object_walk.rs  section_map.rs  write_path.rs
docs/: EXTENDING_DECODERS.md  python.md
docs/announcements/: 01-hn-show-hn.md  02-r-rust-post.md  03-linkedin-aec.md  04-r-autocad.md  05-oda-community.md  06-libre-cad-freecad-qcad.md  07-twitter-thread.md
docs/blog/: 01-reading-dwg-without-autocad.md  02-open-dwg-pipeline.md  03-sibling-projects-rvt-rs.md
docs/landing/: benchmarks.md  compatibility.md  demo-gallery.md
docs/viewer/: index.html
examples/: basic_open.rs  coverage_report.rs  debug_section_map.rs  dhat_profile.rs  dump_decoded_entities.rs  dump_line_payload.rs  dump_metadata.rs  dwg_to_svg.rs  extract_preview.rs  find_line_entity.rs  gltf_demo.rs  gltf_full.rs  probe_handles.rs  probe_metadata.rs  probe_objects.rs  scan_cursor_offsets.rs  test_h2_truncate.rs  test_h3_invisibility.rs  test_line_bd_vs_rd.rs  trace_common_entity.rs  walk_entities.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: bitcursor_primitives.rs  classmap_parse.rs  dwg_file_open.rs  handlemap_parse.rs  header_vars.rs  lz77_decompress.rs  object_walker.rs  rs_fec_decode.rs  section_map.rs
src/: api.rs  bitcursor.rs  bitwriter.rs  block_expansion.rs  cipher.rs  classes.rs  color.rs  common_entity.rs  crc.rs  curve.rs  dxf.rs  dxf_convert.rs  dxf_sections.rs  element_encoder.rs  entity_geometry.rs  error.rs  file_writer.rs  geometry.rs  gltf.rs  graph.rs  handle_allocator.rs  handle_map.rs  header.rs  header_vars.rs  lib.rs  limits.rs  lz77.rs  lz77_encode.rs  metadata.rs  object.rs  object_type.rs  python_stubs.rs  r2007.rs  reader.rs  reed_solomon.rs  reed_solomon_encode.rs  section.rs  section_map.rs  section_writer.rs  svg.rs  (+1 more)
src/entities/: arc.rs  attdef.rs  attrib.rs  block.rs  body.rs  camera.rs  circle.rs  dimension.rs  dimension_aligned.rs  dimension_angular_2l.rs  dimension_angular_3p.rs  dimension_diameter.rs  dimension_linear.rs  dimension_ordinate.rs  dimension_radial.rs  dispatch.rs  ellipse.rs  endblk.rs  extruded_surface.rs  geodata.rs  hatch.rs  helix.rs  image.rs  imagedef.rs  insert.rs  leader.rs  light.rs  line.rs  lofted_surface.rs  lwpolyline.rs  mesh.rs  mleader.rs  mline.rs  mod.rs  modeler.rs  mtext.rs  ole2_frame.rs  point.rs  polyface_mesh.rs  polygon_mesh.rs  (+19 more)
src/objects/: acad_group.rs  acad_layout.rs  acad_material.rs  acad_mlinestyle.rs  acad_plot_settings.rs  acad_property_set_data.rs  acad_scale.rs  acad_visual_style.rs  class_map_extension.rs  control.rs  custom_dict_entry.rs  dictionary.rs  mod.rs  proxy_entity.rs  proxy_object.rs  xdata.rs  xrecord.rs
src/tables/: appid.rs  block_record.rs  dimstyle.rs  layer.rs  ltype.rs  mod.rs  style.rs  ucs.rs  view.rs  vport.rs
templates/entity-decoder/: README.md  cargo-generate.toml  {{entity_module}}.rs
tests/: code_table_agreement.rs  corpus_roundtrip.rs  dispatch_roundtrip.proptest-regressions  dispatch_roundtrip.rs  integration_dxf_roundtrip.rs  integration_entity_regression.rs  integration_fuzz_corpus_regression.rs  integration_gltf.rs  integration_svg_goldens.rs  integration_write_roundtrip.rs  mutation_failure_modes.rs  proptest_roundtrip.rs  r2013_entity_values.rs  samples.rs
tests/fixtures/canonical/: README.md
tests/fixtures/raw_entities/: README.md
tools/synthetic-dwg/: Cargo.toml
tools/synthetic-dwg/src/: main.rs
wasm/: Cargo.toml  README.md
wasm/.cargo/: config.toml
wasm/examples/samples/: README.md  line_r14.dwg
wasm/src/: dim_render.rs  drag_drop.rs  export_buttons.rs  layer_panel.rs  lib.rs  linetype.rs  measure.rs  no_upload.rs  render.rs  text_render.rs  url_state.rs  viewer.rs  viewer_stubs.rs  web_worker.rs
