[package]
name = "dwg"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Clean-room Apache-2 Rust foundation for Autodesk DWG files (R13–R2018). Container layer shipping; per-entity decoders are alpha — see README for honest coverage."
authors = ["Griffin Long <151978260+DrunkOnJava@users.noreply.github.com>"]
repository = "https://github.com/DrunkOnJava/dwg-rs"
homepage = "https://github.com/DrunkOnJava/dwg-rs"
documentation = "https://docs.rs/dwg"
readme = "README.md"
keywords = ["dwg", "autocad", "cad", "parser", "file-format"]
categories = ["parser-implementations", "filesystem", "encoding"]
exclude = [
    ".github/",
    ".gitattributes",
    "fuzz/",
    # Note: CHANGELOG.md, README.md, SECURITY.md, ARCHITECTURE.md, and
    # NOTICE are intentionally INCLUDED in the published crate so users
    # who discover the crate via `cargo add dwg` can read the honest
    # coverage story (including the pre-alpha status note) without
    # having to browse GitHub.
]

[dependencies]
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[features]
default = []
# Emit per-iteration eprintln! traces from the LZ77 decoder. Only enable
# for debugging; unconditional tracing would wreck performance and flood
# stderr on healthy files.
lz77-trace = []

[[bin]]
name = "dwg-info"
path = "src/bin/dwg_info.rs"

[[bin]]
name = "dwg-corpus"
path = "src/bin/dwg_corpus.rs"

[[bin]]
name = "dwg-dump"
path = "src/bin/dwg_dump.rs"

[[bin]]
name = "dwg-convert"
path = "src/bin/dwg_convert.rs"

[lib]
name = "dwg"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
