[package]
name = "dwg"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Clean-room Apache-2 Rust foundation for Autodesk DWG files (R13–R2018). Container layer shipping; per-entity decoders are alpha — see README for honest coverage."
authors = ["Griffin Long <151978260+DrunkOnJava@users.noreply.github.com>"]
repository = "https://github.com/DrunkOnJava/dwg-rs"
homepage = "https://github.com/DrunkOnJava/dwg-rs"
documentation = "https://docs.rs/dwg"
readme = "README.md"
keywords = ["dwg", "autocad", "cad", "parser", "file-format"]
categories = ["parser-implementations", "filesystem", "encoding"]
exclude = [
    ".github/",
    ".gitattributes",
    "fuzz/",
    # Developer-experience scaffolding. `templates/` contains a
    # cargo-generate template for entity decoders (handlebars
    # placeholders, not valid Rust); `tools/` contains auxiliary
    # binaries like the synthetic-DWG fixture generator. Neither
    # belongs in the published library crate.
    "templates/",
    "tools/",
    # Note: CHANGELOG.md, README.md, SECURITY.md, ARCHITECTURE.md, and
    # NOTICE are intentionally INCLUDED in the published crate so users
    # who discover the crate via `cargo add dwg` can read the honest
    # coverage story (including the pre-alpha status note) without
    # having to browse GitHub.
]

[dependencies]
# Library-only runtime dependencies — these are pulled by anything
# that uses `dwg` as a crate dependency.
thiserror = "1"
byteorder = "1"

# CLI-only dependencies — gated behind the `cli` feature so library
# consumers don't drag them in. Each `[[bin]]` declares
# `required-features = ["cli"]` to keep them in lockstep.
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Heap profiler used by `examples/dhat_profile.rs`. Declared in
# `[dependencies]` with `optional = true` (Cargo disallows optional
# dev-dependencies) so it is only resolved when the `dhat-heap`
# feature is activated, e.g.
#   cargo run --release --example dhat_profile --features dhat-heap
# Library consumers that do not opt in never pull this crate.
dhat = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lz77"
harness = false

[[bench]]
name = "section_map"
harness = false

[[bench]]
name = "object_walk"
harness = false

[[bench]]
name = "metadata_parse"
harness = false

[[bench]]
name = "libredwg_compare"
harness = false

[features]
default = []
# Opt-in feature bundle that pulls everything the four bundled CLI
# binaries need. Downstream consumers who only use the library do
# NOT need this; pure-library users get `thiserror` + `byteorder`
# and nothing else.
cli = ["dep:anyhow", "dep:clap", "dep:serde", "dep:serde_json"]
# Emit per-iteration eprintln! traces from the LZ77 decoder. Only enable
# for debugging; unconditional tracing would wreck performance and flood
# stderr on healthy files.
lz77-trace = []
# Install `dhat::Alloc` as the global allocator in
# `examples/dhat_profile.rs`. Turned off by default so the example's
# heap-profiler init does not run during `cargo build --examples` or
# `cargo test`. Activate with
# `cargo run --release --example dhat_profile --features dhat-heap`.
dhat-heap = ["dep:dhat"]

[[bin]]
name = "dwg-info"
path = "src/bin/dwg_info.rs"
required-features = ["cli"]

[[bin]]
name = "dwg-corpus"
path = "src/bin/dwg_corpus.rs"
required-features = ["cli"]

[[bin]]
name = "dwg-dump"
path = "src/bin/dwg_dump.rs"
required-features = ["cli"]

[[bin]]
name = "dwg-convert"
path = "src/bin/dwg_convert.rs"
required-features = ["cli"]

[lib]
name = "dwg"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
