[package]
name = "dwg-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dwg = { path = ".." }

[[bin]]
name = "lz77_decompress"
path = "fuzz_targets/lz77_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bitcursor_primitives"
path = "fuzz_targets/bitcursor_primitives.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dwg_file_open"
path = "fuzz_targets/dwg_file_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "section_map"
path = "fuzz_targets/section_map.rs"
test = false
doc = false
bench = false

[[bin]]
name = "object_walker"
path = "fuzz_targets/object_walker.rs"
test = false
doc = false
bench = false

[[bin]]
name = "classmap_parse"
path = "fuzz_targets/classmap_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "handlemap_parse"
path = "fuzz_targets/handlemap_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "header_vars"
path = "fuzz_targets/header_vars.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rs_fec_decode"
path = "fuzz_targets/rs_fec_decode.rs"
test = false
doc = false
bench = false

[profile.release]
# cargo-fuzz compiles targets in release mode with sanitizers controlled
# via RUSTFLAGS (-Z sanitizer=address, etc). We keep `debug = 1` so stack
# traces on crash artifacts are legible; sanitizer and coverage flags are
# injected by `cargo fuzz run`.
debug = 1

# Custom profile `fuzz` used to exist here; removed because cargo-fuzz
# does NOT invoke custom profiles and their presence only confused
# downstream tooling. To adjust fuzz-specific flags, set RUSTFLAGS
# or pass `--sanitizer=<name>` to cargo-fuzz directly.
