[package]
name = "dwg-wasm"
version = "0.0.0"
publish = false
edition = "2024"
description = "WebAssembly bindings for dwg-rs (V-01/V-02 scaffolding)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dwg = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Shrinks the generated .wasm in release mode. No panic unwinding —
# the crate's #![forbid(unsafe_code)] means abort-on-panic is safe.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
