[package]
name = "dwg-wasm"
version = "0.0.0"
publish = false
edition = "2024"
description = "WebAssembly bindings for dwg-rs (V-01/V-02 scaffolding)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dwg = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Shrinks the generated .wasm in release mode. No panic unwinding —
# the crate's #![forbid(unsafe_code)] means abort-on-panic is safe.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# wasm-pack's bundled `wasm-opt` (binaryen) doesn't enable the
# bulk-memory feature by default, but modern rustc (1.82+) emits
# `memory.copy` / `memory.fill` instructions unconditionally. Without
# `--enable-bulk-memory`, `wasm-opt -O` fails validation with
# "Bulk memory operations require bulk memory". The override below
# forwards the feature flag and keeps the `-O` optimization pass.
#
# See: https://github.com/rustwasm/wasm-pack/issues/1441
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
